# api-retencion

./: .env.example  .gitignore  pyproject.toml
.claude/: settings.local.json
app/: config.py  db.py  errors.py  main.py  models.py
app/routers/: maestros.py  proveedores.py  retenciones.py
